# Agentic_AI_CCTV

./: Agentic_AI_CCTV_PRD_v1.1.docx  GETTING_STARTED.md  README.md  config.example.yaml  pyproject.toml
scripts/: launch-modules.bat  launch-modules.sh  launch.bat  launch.sh  rtsp_simulator.py  stop-modules.sh  stop.sh
src/agentic_cctv/: __init__.py  a2a_comm.py  alert_system.py  dashboard.py  (+29 more)
src/agentic_cctv.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_a2a_comm.py  test_alert_system.py  test_config_manager.py  test_context_filter.py  test_dashboard.py  test_detection_engine.py  test_distributed_mqtt.py  test_environment_templates.py  test_event_encoder.py  test_event_summarizer.py  test_frame_crop_store.py  test_health_api.py  test_heartbeat_publisher.py  test_integration_phase1.py  test_integration_phase2.py  test_integration_phase3.py  test_integration_phase4.py  test_integration_video_snippet.py  test_main.py  test_mcp_server.py  test_mobile_api.py  test_models.py  test_mqtt_client.py  test_orchestration_agent.py  test_prompt_compiler.py  test_property_alert_cooldown.py  test_property_config_roundtrip.py  test_property_config_validation.py  test_property_context_filter.py  test_property_detection_gate.py  test_property_environment_templates.py  test_property_event_encoder_video.py  test_property_event_schema.py  test_property_frame_crop_encryption.py  test_property_mqtt_topic.py  test_property_orchestration_action.py  test_property_ring_buffer.py  test_property_ruleset_versioning.py  test_property_snippet_assembler.py  (+16 more)
(+1 files in other folders)
