[build-system]
requires = ["setuptools>=75.0.0", "wheel>=0.44.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-cctv"
version = "0.1.0"
description = "Agentic AI CCTV Monitoring Framework — edge detection, MQTT streaming, VLM reasoning, and agentic orchestration"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Proprietary"}

dependencies = [
    "paho-mqtt==2.1.0",
    "ultralytics==8.3.145",
    "opencv-python==4.11.0.86",
    "pyyaml==6.0.2",
    "psutil==7.0.0",
    "cryptography==44.0.3",
    "aiohttp==3.11.18",
]

[project.optional-dependencies]
dev = [
    "hypothesis==6.141.1",
    "pytest==8.3.5",
    "pytest-asyncio==0.25.3",
    "chromadb==1.0.7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
